# actinia-api

./: .coveragerc  .flake8  .gitignore  .travis.yml  README.md  RELEASE.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: black.yml  flake8.yml  linting.yml  python-publish.yml
docker/release/: Dockerfile  README.md
src/actinia_api/: __init__.py
src/actinia_api/swagger2/: __init__.py
src/actinia_api/swagger2/actinia_core/: __init__.py
src/actinia_api/swagger2/actinia_core/apidocs/: api_log_management.py  download_cache_management.py  ephemeral_processing_with_export.py  location_management.py  map_layer_management.py  mapset_management.py  mapsets.py  persistent_processing.py  process_chain_monitoring.py  process_validation.py  project_management.py  raster_colors.py  raster_export.py  raster_layer.py  raster_legend.py  raster_renderer.py  resource_management.py  resource_storage_management.py  strds_management.py  strds_raster_management.py  strds_renderer.py  user_api_key.py  user_management.py  vector_layer.py  vector_renderer.py
src/actinia_api/swagger2/actinia_core/schemas/: __init__.py  api_log_management.py  location_management.py  map_layer_base.py  mapset_management.py  process_chain_monitoring.py  project_management.py  raster_colors.py  raster_layer.py  strds_management.py  strds_raster_management.py  user_api_key.py  vector_layer.py
src/actinia_api/swagger2/actinia_grassdata_management_plugin/: __init__.py
src/actinia_api/swagger2/actinia_grassdata_management_plugin/apidocs/: map_layer_management.py  raster_colors.py  raster_layer.py  raster_legend.py  raster_renderer.py  strds_management.py  strds_raster_management.py  strds_renderer.py  vector_layer.py  vector_renderer.py
src/actinia_api/swagger2/actinia_grassdata_management_plugin/schemas/: __init__.py  map_layer_base.py  raster_colors.py  raster_layer.py  strds_management.py  strds_raster_management.py  vector_layer.py
