[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-api"
version = "3.2.0"
description = "API description for actinia-core and official plugins."
readme = "README.md"
authors = [{ name = "mundialis" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["processing", "earth observation", "grass gis"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/mundialis/actinia_core"
Tutorial = "https://mundialis.github.io/actinia_core"
API_Docs = "https://redocly.github.io/redoc/?url=https://actinia.mundialis.de/latest/swagger.json"
